Dans le head: Ajout d’un tiret dans utf8, Correction htlm en html.Dans le header: remplacement des classes par des id au niveau des titres hébergements et activités et des # au niveaux des href de la nav contenant respectivement hébergements et activités.Dans la partie research: création d’une classe pour le H1 et un font-size de 22px, création d’une classe pour le paragraphe pour un font-size de 18px, le Font-size de l’input de 18px au lieu de 22px, le padding-right de l’input passe à 75px au lieu de 129px, le font-size du button modifié a 18px au lieu de 15px, le mot <Filtre> font-size de 18px au lieu de 16px.Dans la partie accommodation: création d’une classe sur le H2 puis un font-size de 22px, réduction de la largeur de 66 à 65%, rajout d’un margin dans accommodation-title, height de accomodation gallerry on passe de 37% à 40%, Accommodation galery-content: dans l’align content, j’ai mis un space-evently plutôt qu’un space-around.Dans la partie popular: un space-evently au lieu d’un space-around, un font-size de 22px pour le H2, réduction de la largeur de la partie popular de 31 à 30%, modification de la width de 90% à 82 % pour la partie popular-gallery, un align-items baseline au lieu d’un align-items center pour title -popular. Suppression d’un diplay-flex dans title-popular qui ne servait à rien et rajout d’un margin-bottom dans title-popular.Dans la partie activities: création d’une classe activities-title puis un font-size de 16px, création d’une classe pour le titre de la partie avec un font-size de 22px. Dans la partie footer: un font-size de 18px a été rajouté dans la classe list-title. Un font-size de 16 px a été mis sur tous les LI qui avait comme parent un UL,et fixation du footer au bas de la page. Enfin, j'ai ajouté une description a toutes les images du site

--- a/Booki/stylesheet.css
+++ b/Booki/stylesheet.css
@@ -3,7 +3,8 @@
 }
 
 .body {
-    margin: 0px 30px 0
+    margin: 0px 30px 0;
+    position: relative
 }
 
 .booki-logo {
@@ -34,6 +35,14 @@ a {
     color: black
 }
 
+.title-research {
+    font-size: 22px
+}
+
+.info-research {
+    font-size: 16px
+
+}
 .search-bar {
     display: flex;
     justify-content:flex-start;
@@ -72,7 +81,7 @@ ul {
 }
 
 input {
-    padding-right: 129px;
+    padding-right: 75px;
     border: 2px solid #F2F2F2
     
 }
@@ -80,7 +89,8 @@ input {
 input::placeholder {
     color: black;
     font-weight: bold;
-    font-size: 23px;
+    font-size: 18px;
+    padding-left: 5px;
     overflow: visible
 }
 
@@ -89,7 +99,7 @@ input::placeholder {
     border: none;
     border-radius: 0 10px 10px 0;
     padding:10px;
-    font-size: 15px;
+    font-size: 18px;
     color: white
 }
 
@@ -97,6 +107,7 @@ input::placeholder {
     display:flex;
     align-items: center;
     width: 70%;
+    font-size: 18px;
     font-weight: bold
 }
 
@@ -141,7 +152,7 @@ input::placeholder {
 
 .accommodation {    
     background-color: #f2f2f2;
-    width:63%;
+    width:65%;
     height: 670px;
     padding-left: 30px;
     border-radius: 20px
@@ -152,14 +163,14 @@ input::placeholder {
     display:flex;
     flex-wrap:wrap;
     justify-content: space-between;
-    align-content: space-around;
+    align-content: space-evenly;
     height: 520px
 }
 
 .accommodation-gallery {
     background-color: #FFF;
     width: 31%;
-    height: 37%;
+    height: 40%;
     border-radius: 20px;
     box-shadow:lightgrey 2px 4px 20px  
 }
@@ -172,6 +183,10 @@ input::placeholder {
     object-fit: cover
 }
 
+#accommodation-title {
+    font-size: 22px;
+    margin: 50px 0px 0px 0px
+}
 .text-gallery {
     margin-left: 5px
 }
@@ -204,18 +219,23 @@ input::placeholder {
     background-color: #F2F2F2;
     display:flex;
    flex-direction: column;
-   justify-content: space-around;
+   justify-content: space-evenly;
    align-items: center;
-    width: 31%;
+    width: 30%;
     border-radius: 20px
 }
 
 .description-popular {
-    justify-content: space-between;
+    justify-content: space-between
+}
+
+.title-popular {
+    font-size: 22px;
+    margin-bottom: 0px
 }
 .text-area h3 {
     font-size: 16px;
-    margin: 9px;
+    margin: 9px
 }
 
 .text-area p {
@@ -246,15 +266,12 @@ padding:10px
 
 .title-icon {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: space-around;
     width:100%
 }
 
-.title-popular {
-    display: flex
 
-}
 
 .fa-chart-line {
     display: flex
@@ -264,7 +281,7 @@ padding:10px
     display:flex;
     justify-content:space-around;
     background-color: #FFF;
-    width: 90%;
+    width: 82%;
     height: 20%;
     border-radius: 20px; 
     box-shadow: lightgrey 2px 4px 12px;
@@ -290,6 +307,7 @@ padding:10px
     flex-direction: column
     
 }
+
 
 .activities {
     display:flex;
@@ -319,13 +337,29 @@ padding:10px
     object-fit: cover
 }
 
+#activities-main-title {
+    font-size: 22px
+}
+
+.activities-title {
+    font-size: 16px
+}
+
 .footer {
-    background-color: #f2f2f2
+    background-color: #f2f2f2;
+    position: absolute;
+    bottom: auto;
+    width: 100%
 }
 
 .list-title {
     font-weight: bold;
-    line-height: 45px
+    line-height: 45px;
+    font-size: 18px
+}
+
+.footer>ul>li {
+    font-size: 16px
 }
 
 .list-footer li {
